assets/css/destinations-style.css
* {
    color: rgb(54, 112, 99);
    font-family: 'Open Sans', sans-serif;
}

main,
body {
    margin-top: 0;
}

#results {
    font-family: 'Open Sans', sans-serif;
    font-weight: bolder;
    font-size: xx-large;
    text-align: center;
    background-color: rgba(54, 112, 99);
    border-radius: 1rem;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    padding: 3rem;
    padding-right: 0;
    padding-left: 0;
}

h2 {
    color: white;
    font-family: 'Permanent Marker', cursive;
}

h3,
p {
    color: white !important;
}

.footer {
    position: inherit;
    bottom: 0;
    text-align: center;
    width: 100%;
}

@media only screen and (max-width: 720px) {
    #results {
        font-family: 'Open Sans', sans-serif;
        font-weight: bolder;
        font-size: xx-large;
        text-align: center;
        background-color: rgba(54, 112, 99);
        border-radius: 1rem;
        width: 90%;
        margin-left: auto;
        margin-right: auto;
        padding: 3rem;
        padding-right: 0;
        padding-left: 0;
    }
    h2 {
        padding-left: 1rem;
        padding-right: 1rem;
    }
}

